--- a/.github/workflows/grade.yml
+++ b/.github/workflows/grade.yml
@@ -25,8 +25,8 @@ on:
   # To change the behavior of submitting on every push (vs just when commit has message
   # submit or when the submission is manually requested)
   push:
-    branches:
-      - main
+   branches:
+     - main
 
 jobs:
   grade:
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: submission
-
+      
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
@@ -49,13 +49,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
 
-      - name: Run Unit Tests
-        working-directory: submission
-        run: |
-          python -m unittest discover -v
-
       - name: Collect Submission and Run Grader
-        uses: pawtograder/assignment-action@v1
+        uses: Smaran-Teja/assignment-action@python-builder
         with:
           grading_server: 'https://api.pawtograder.com'
           handout_repo: 'neu-cs2100/fa25-hw1-algodecisionmakers-handout'
